--- a/iframe.html
+++ b/iframe.html
@@ -529,8 +529,8 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-utC0bR--.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/preload-helper-D9Z9MdNV.js">
+    <script type="module" crossorigin src="/stencil-core/assets/iframe-Dekc-Wbb.js"></script>
+    <link rel="modulepreload" crossorigin href="/stencil-core/assets/preload-helper-DJfpOrTE.js">
   </head>
 
   <body>
