--- a/iframe.html
+++ b/iframe.html
@@ -529,7 +529,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C9EEsFzF.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-D5Xv28TE.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/preload-helper-D9Z9MdNV.js">
   </head>
 
