--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         
           window['TAGS_OPTIONS'] = {
   "dev-only": {
+    "excludeFromSidebar": true,
     "excludeFromDocsStories": true
   },
   "docs-only": {
