--- a/test/wdio/ts-target/extends-direct-state/es2022.custom-element.html
+++ b/test/wdio/ts-target/extends-direct-state/es2022.custom-element.html
@@ -1,7 +1,10 @@
 <html>
 <head>
   <title>ES2022 custom-element output - Direct State Extends</title>
-  <script src="/test-ts-target-output/dist-custom-elements/testtstarget.esm.js" type="module"></script>
+  <script type="module">
+    import { defineCustomElement } from '/test-ts-target-output/custom-elements/extends-direct-state.js';
+    defineCustomElement()
+  </script>
 </head>
 <body>
   <h1>ES2022 custom-element output - Direct State Extends</h1>
