--- a/iframe.html
+++ b/iframe.html
@@ -529,7 +529,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-BkEE5etF.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CHPvc_4h.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/preload-helper-D9Z9MdNV.js">
   </head>
 
